--- a/less/header.less
+++ b/less/header.less
@@ -304,3 +304,32 @@
 		}
 	}
 }
+
+.wallet-button{
+    -webkit-box-align: center;
+    align-items: center;
+    background-color: black;
+    border: 0px;
+    border-radius: 12px;
+    color: rgb(209, 108, 0);
+    cursor: pointer;
+    display: flex;
+    font-size: 14px;
+    font-weight: 700;
+    height: 36px;
+    -webkit-box-pack: center;
+    justify-content: center;
+    outline: none;
+    padding-left: 16px;
+    padding-right: 16px;
+    width: 100%;
+}
+button#btn-disconnect {
+    color: #90EE90;
+}
+
+.walletbutton {
+    margin-left: 5px;
+    margin-top: 8px;
+}
+
